workloads/default/resume/templates/resume.vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: resume
  namespace: default

spec:
  gateways: ["primary.istio-system"]
  hosts: ["stevenxie.me"]
  http:
    - match:
        - uri:
            prefix: /resume/
      rewrite:
        uri: /
      route:
        - destination:
            host: resume
          headers:
            response:
              set:
                X-Service: resume
    - match:
        - uri:
            exact: /resume
      redirect:
        uri: /resume/
